# rust-latte-compiler

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs  temp.lat  test.lat
inputs/: _lexer_comments.lat  _parser_ugly.lat
inputs/bad/: block_variables.lat  nested_array.lat  new_int.lat  new_string.lat  no_return_in_if.lat  no_return_in_if_2.lat  no_return_in_if_3.lat  no_return_in_while.lat  no_return_in_while_2.lat  no_return_in_while_3.lat  unclosed.lat  undefined_function.lat
inputs/good/: arg_order_does_matter.lat  bool_calls.lat  call_by_value.lat  core018_direct.lat  core018_fun.lat  core026.lat  error.lat  expr_simplification1.lat  expr_simplification2.lat  if_false_always_returns.lat  if_phi.lat  ir_test.lat  mutable_argument.lat  nested_block_return.lat  stmts_after_return.lat  stmts_after_return_block.lat  string_equality.lat  string_equality.output  string_ops.lat  string_ops2.lat
junk/: test.bc
lib/: runtime.bc  runtime.c  runtime.ll
src/: ast.rs  dfa.rs  errors.rs  example.rs  grammar.rs  input.rs  ir.rs  junk.rs  latte.lalrpop  lexer.rs  lexer2.rs  lib.rs  llvm_generator.rs  main.rs  parser.rs  parser2.rs  typechecker.rs  typed_ast.rs  typed_ast_lowering.rs
src/snapshots/: rust_latte_compiler__ast__tests__comments.snap  rust_latte_compiler__ast__tests__hello_world.snap  rust_latte_compiler__ast__tests__simple.snap  rust_latte_compiler__lexer__tests___lexer_comments.snap  rust_latte_compiler__lexer__tests___lexer_simple.snap  (+6 more)
tests/: .gitignore  bad_test.rs.template  good_test.rs.template  test_header.rs.template
(+128 files in other folders)
