[package]
name = "rust-latte-compiler"
version = "0.1.0"
edition = "2021"

[dependencies]
ariadne = "0.4"
anyhow = "1"
lalrpop-util = { version = "0.20", features = ["lexer"] }
logos = "0.13"
either = "1"
tempfile = "3"
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm14-0"] }

[dev-dependencies]
insta = "1"

[build-dependencies]
lalrpop = "0.20"

[profile.dev.package.insta]
opt-level = 3

[profile.dev.package.similar]
opt-level = 3

